...

    <string name="title_driver_photo">Your Driver Photo</string>
    <string name="title_driver_license">Driver License</string>
    <string name="title_driver_tnc_sticker">Auto Inspection Sticker</string>
    <string name="title_driver_insurance">Insurance</string>
    <string name="title_terms_and_conditions">Terms and Conditions</string>
    <string name="title_driver_vehicle_information">Vehicle Information</string>
    <string name="title_driver_year">Year</string>
    <string name="title_driver_make">Make</string>
    <string name="title_driver_model">Model</string>
    <string name="title_driver_color">Color</string>
    <string name="title_license_plate">License plate</string>
    <string name="licence_place">Licence place</string>
    <string name="driver_licence_expiration_date">Expiration Date:</string>
    <!-- driver -->
    <string name="register_driver">Register as a driver</string>
    <string name="register_driver_sucess">Thank you for your application! We will reach out to you soon regarding next steps.</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>

    <string name="rating_feedback_message_text">What feedback would you give %s</string>

    <string name="driver_info">Interested in\nbecoming a driver?</string>
    <string name="coming_soon">Coming soon, please be patient</string>
    <string name="license_confirm">Have you had your license for at least ONE year?</string>
...
