<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="30dp">

    <TextView
        android:id="@+id/header"
        style="@style/RATextView.MontserratLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/users_name_in_settings"
        tools:text="@string/permissions_header" />

</LinearLayout>