...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/driver_licence_expiration_date" />

                <Button
                    android:id="@+id/select_expiration_date_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackground"
                    android:ems="12"
                    android:text="@string/select" />

            </LinearLayout>

            <include layout="@layout/view_single_divider" />

            <Button
                android:id="@+id/openTakePhotoControl"
                style="@style/Button.RoundedBlueButton"
                android:layout_margin="@dimen/material_padding"
                android:drawableStart="@drawable/icn_photo_white"
                android:paddingEnd="@dimen/material_padding"
                android:paddingStart="@dimen/material_padding"
                android:text="@string/take_photo" />
...
