...
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="17dp"
                            android:background="#DFDFDF" />

                        <LinearLayout
                            android:id="@+id/bevo_container"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="15dp"
                            android:orientation="horizontal"
...
                            <Space
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="1dp" />

                            <android.support.v7.widget.SwitchCompat
                                android:id="@+id/bevo_switch"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="@={viewModel.bevoBucksChecked}"/>

                        </LinearLayout>

...
