<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">

        <!--<item-->
        <!--android:id="@+id/navPayment"-->
        <!--android:icon="@drawable/nav_payment"-->
        <!--android:title="@string/payment" />-->
        <!--<item-->
        <!--android:id="@+id/navHistory"-->
        <!--android:icon="@drawable/nav_history"-->
        <!--android:title="@string/history" />-->
...
